--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity
-                android:name=".activity.NowPlaying"
+                android:name=".activity.NowPlayingActivity"
                 android:label="@string/title_activity_now_playing"
                 android:theme="@style/AppTheme.NoActionBar">
         </activity>
