--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".activity.SettingActivity">
+        </activity>
         <activity
                 android:name=".activity.NowPlayingActivity"
                 android:label="@string/title_activity_now_playing"
