--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,7 @@ android {
 }
 
 dependencies {
+    implementation "androidx.palette:palette:1.0.0"
     implementation "androidx.preference:preference:1.1.0"
     implementation("com.github.bumptech.glide:glide:4.10.0")
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
