--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.example.androidisshit">
+          package="com.example.lunamusic">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -16,20 +16,20 @@
             android:theme="@style/AppTheme"
             android:usesCleartextTraffic="true">
         <service
-                android:name=".service.MusicService"
+                android:name="com.example.lunamusic.service.MusicService"
                 android:enabled="true"
                 android:exported="true">
         </service>
 
-        <activity android:name=".activity.SettingActivity">
+        <activity android:name="com.example.lunamusic.activity.SettingActivity">
         </activity>
         <activity
-                android:name=".activity.NowPlayingActivity"
+                android:name="com.example.lunamusic.activity.NowPlayingActivity"
                 android:label="@string/title_activity_now_playing"
                 android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
-                android:name=".activity.MainActivity"
+                android:name="com.example.lunamusic.activity.MainActivity"
                 android:label="@string/app_name"
                 android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
